# sst

./: .clang-format  ARCHIVE.adoc  Makefile.am  README.adoc  aclocal.m4  autogen  configure  configure.ac  pom.xml.in  sst.bash
build-aux/: DATE.sh  GATBPS_CONFIG_FILE_RULES.am  GATBPS_CONFIG_LATER_RULES.am  GATBPS_CP_RULES.am  GATBPS_DOCKER_BUILD_RULES.am  GATBPS_GIT_ARCHIVE_RULES.am  GATBPS_GIT_BUNDLE_RULES.am  GATBPS_GIT_CLONE_RULES.am  GATBPS_JAVA_CLASS_RULES.am  GATBPS_JAVA_RULES.am  GATBPS_M4_RULES.am  GATBPS_RECIPE_MARKER.am  GATBPS_TAR_RULES.am  GATBPS_VPATH_SEARCH.am  GATBPS_V_NOP.am  GATBPS_V_PAD.am  GATBPS_WGET_RULES.am  GATBPS_XZ_RULES.am  INPUT_FILTER.sh.in  LTCURRENT.sh  PACKAGE_STRING.df.in  VERSION.sh  autogen-clean.keep  autogen.ac  autogen.am  cp.am  docker.am  doxygen.am  dvi-dist.am  echo.sh  gatbps-echo.sh  gatbps-gen-date.sh  gatbps-gen-libtool-c.sh  gatbps-gen-version.sh  gatbps.ac  gatbps.am  gen-configure.sh  git.am  gzip.am  html-dist.am  (+15 more)
build-aux/cmake/: with_openssl.cmake  with_threads.cmake
build-aux/downloads/: apiguardian-api-1.1.0.jar.ag.json  bootstrap-5.3.3.min.css.ag.json  d3-7.2.1.min.js.ag.json  d3-sankey-0.12.3.min.js.ag.json  git-2.11.0.tar.xz.ag.json  git-2.20.1.tar.gz.ag.json  gmp-6.1.2.tar.xz.ag.json  gpl-3.0.txt.ag.json  jquery-ui-1.12.1-base.css.ag.json  jquery-ui-1.12.1.min.js.ag.json  json-simple-1.1.1.jar.ag.json  junit-platform-console-standalone-1.5.1.jar.ag.json  katex-0.13.18.tar.gz.ag.json  mariadb-java-client-2.4.4.jar.ag.json  mariadb-java-client-2.5.1.jar.ag.json  mysql-connector-java-8.0.17.jar.ag.json  nettle-3.4.tar.gz.ag.json  ojdbc8-12.2.0.1.jar.ag.json  ojdbc8-18.3.jar.ag.json  openssl-1.1.1d.tar.gz.ag.json  picocli-4.0.2.jar.ag.json  rabbitmq-c-0.9.0.tar.gz.ag.json  texinfo-6.3.tar.xz.ag.json
build-aux/gitbundles/: gatbps.ag.json  mathjax-2.7.9.ag.json  mathjax-3.2.0.ag.json  sst.ag.json
doc/: sst-0.39.0-manual.tar.xz  sst-0.40.3-manual.tar.xz  sst.am  sst.info  sst.texi
doc/dox/: dox.ag  dox.am  dox.df  dox.df.in  dox_src.am  mainpage.dox
doc/manual/: README.adoc  attributes.adoc  bash_library.adoc  bl_always_use_x_equals_quoted_at.adoc  bl_arg_joined_csf_function_io_fragment.adoc  bl_array_functions.adoc  bl_attributes.adoc  bl_autogen_json_handlers.adoc  bl_boolean_variable_fragment.adoc  bl_bootstrapping.adoc  bl_build_dist_archive_bash.adoc  bl_build_system_functions.adoc  bl_command_line_argument_parsing.adoc  bl_core_functions.adoc  bl_csf_not_necessary_fragment.adoc  bl_do_not_make_IFS_readonly.adoc  bl_do_not_make_global_variables_readonly.adoc  bl_double_quoted_expansion_fragment.adoc  bl_filesystem_tools.adoc  bl_filesystem_utilities.adoc  bl_function_result_cache_variable_fragment.adoc  bl_general_development_guidelines.adoc  bl_gitlab_ci_prepare_dist_repo.adoc  bl_gitlab_ci_publish_dist_repo.adoc  bl_global_variable_declarations.adoc  bl_including_the_library.adoc  bl_internal_development_guidelines.adoc  bl_json_argument_fragment.adoc  bl_json_functions.adoc  bl_miscellaneous.adoc  bl_path_functions.adoc  bl_pipeline_subshell_fragment.adoc  bl_pipeline_subshell_warning_fragment.adoc  bl_postmortem_job_containers.adoc  bl_prepare_dist_repo_bash.adoc  bl_publish_dist_repo_bash.adoc  bl_reserved_identifiers.adoc  bl_single_argument_csf_function_io_fragment.adoc  bl_sst_ac_config_file.adoc  bl_sst_ac_include.adoc  (+390 more)
doc/pages/: Gemfile  README.adoc  _config.yml  build.phony.ag  index.html  index.md  manual.am  pages.ag  pages.am  pages_src.am  style.scss
doc/readme/: archive_entry_fragment.adoc  artifact_links_fragment.adoc  build.phony.ag  common.adoc  config.adoc  config.adoc.in  config_source.adoc  documentation.adoc  flatten.gawk  in_source_repo.adoc  in_source_repo.adoc.ag  main.adoc  manual_links_fragment.adoc  readme.adoc  source_code.adoc
doc/texi/: PACKAGEDATE.texi  PACKAGEDATE.texi.in  PACKAGEVERSION.texi  PACKAGEVERSION.texi.in  barrow.texi  bdarrow.texi  bdots.texi  bothcontents.texi  copying-block.texi  dprm.texi  dslash.texi  gequ.texi  indent.texi  insertascii.texi  insertmathjax.texi  ipez.texi  larrow.texi  lbarrow.texi  lbdarrow.texi  lcei.texi  ldarrow.texi  lequ.texi  lflo.texi  llarrow.texi  lldarrow.texi  lrarrow.texi  lrdarrow.texi  math.texi  mdot.texi  mdots.texi  msign.texi  mtvskipbot.texi  mtvskiptop.texi  nequ.texi  prm.texi  qprm.texi  rarrow.texi  rcei.texi  rdarrow.texi  rflo.texi  (+4 more)
docs/: README.adoc  index.html  sst-manual.tar.xz
docs/manual/: cl_sst_parse_opt_git_init_example.cpp  docinfo-footer.html  docinfo.html  index.html  sst-asciidoctor.css  sst.css
include/: tgicmp.h  wficmp.h
include/src/: SST_BITC1_BASIC.h  SST_BITC_DISJOINT.h  (+33 more)
install/: on-cygwin  on-ubuntu
lib/: sst-test.jar.ag.json  sst-test.jar.build_tree_classpath.im.in  sst-test.jar.classpath  sst-test.jar.classpath.im.in  sst-tests.jar.build_tree_classpath.im.in  sst-tests.jar.classpath  sst-tests.jar.classpath.im.in  sst.jar.ag.json  sst.jar.build_tree_classpath.im.in  sst.jar.classpath  sst.jar.classpath.im.in  sst.jar.gitignorable.am_df_INPUT
m4/: CALL_DEFUN_ONCE_MACROS.m4  DEFINE_AR.m4  DEFINE_AT.m4  DEFINE_CC.m4  DEFINE_CFLAGS.m4  DEFINE_CLASSPATH.m4  DEFINE_CLASSPATH_SEPARATOR.m4  DEFINE_CPPFLAGS.m4  DEFINE_CXX.m4  DEFINE_CXXFLAGS.m4  DEFINE_DEDUCE_WYNAS.m4  DEFINE_DOCKER_BUILD_FLAGS.m4  DEFINE_DOXYGEN.m4  DEFINE_EXEEXT.m4  DEFINE_EXE_CFLAGS.m4  DEFINE_EXE_CXXFLAGS.m4  DEFINE_EXE_LDFLAGS.m4  DEFINE_GZIP.m4  DEFINE_HAVE_AES128_CTX.m4  DEFINE_HAVE_AES128_KEY_SIZE.m4  DEFINE_HAVE_AES_BLOCK_SIZE.m4  DEFINE_HAVE_AES_CTX.m4  DEFINE_HAVE_AES_ENCRYPT.m4  DEFINE_HAVE_AES_SET_ENCRYPT_KEY.m4  DEFINE_HAVE_ANDROID.m4  DEFINE_HAVE_AVX_512_BW.m4  DEFINE_HAVE_BIGNUM.m4  DEFINE_HAVE_BIGNUM_ST_DEFINITION.m4  DEFINE_HAVE_BN_ADD.m4  DEFINE_HAVE_BN_BIN2BN.m4  DEFINE_HAVE_BN_CTX.m4  DEFINE_HAVE_BN_CTX_END.m4  DEFINE_HAVE_BN_CTX_GET.m4  DEFINE_HAVE_BN_CTX_START.m4  DEFINE_HAVE_BN_FREE.m4  DEFINE_HAVE_BN_LSHIFT.m4  DEFINE_HAVE_BOOL.m4  DEFINE_HAVE_BYTE.m4  DEFINE_HAVE_CFLAG_MAVX512BW.m4  DEFINE_HAVE_CFLAG_MSSE.m4  (+352 more)
src/: sst_status_map_generator.c
sst-java/: pom.xml.in
sst-maven-parent/: pom.xml.in
(+6147 files in other folders)
